fix width layout option not working on mobile (test 2)

--- a/global.css
+++ b/global.css
@@ -246,8 +246,8 @@ button:hover { background-color: rgba(128, 128, 128, 0.5); }
 
 /* Mobile Adjustments */
 @media only screen and (max-width: 1000px) {
-    body { 
-        width: 96%;
+    body {
+        width: 96% !important;
         margin: 0 auto !important;
     }
 
